--- a/source/css/style.css
+++ b/source/css/style.css
@@ -178,6 +178,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .process .container{
     display: flex;
+    flex-direction: column;
 }
 .process__title {
     display: flex;
@@ -195,5 +196,4 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     font-size: 4.8rem;
     line-height: 140%;
-    
 }
