--- a/source/css/style.css
+++ b/source/css/style.css
@@ -176,6 +176,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.6rem;
     line-height: 160%;
 }
+
 .process .container{
     display: flex;
     flex-direction: column;
@@ -183,17 +184,31 @@ h1, h2, h3, h4, h5, h6 {
 .process__title {
     display: flex;
     height: 12.7rem;
-    margin-left: 2rem;
+    
     align-items: center;
 }
 .process__img {
     display: block;
     width: 12.7rem;
     height: 12.7rem;
+    
 }
 .process__header {
     display: block;
     font-weight: 700;
     font-size: 4.8rem;
     line-height: 140%;
+    margin-left: 2rem;
+}
+.process__description {
+    display: block;
+    font-size: 1.6rem;
+    line-height: 160%;
+    width: 40.1rem;
+    margin: 0 0 8rem 2rem;
+}
+.cards__container {
+    display: flex;
+    margin-left: 5rem;
+
 }
