--- a/source/css/style.css
+++ b/source/css/style.css
@@ -207,8 +207,29 @@ h1, h2, h3, h4, h5, h6 {
     width: 40.1rem;
     margin: 0 0 8rem 2rem;
 }
-.cards__container {
+.container__cards {
     display: flex;
-    margin-left: 5rem;
+    flex-direction: row;
+}
+.card {
+    display: flex;
+    flex-direction: column;
 
+}
+.card__header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 140%;
+}
+.card__line {
+    margin-top: 1.5rem;
+    margin-bottom: 4.8rem;
+    width: 32.4rem;
+    height: 0.2rem;
+    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+.card__description {
+    max-width: 30.6rem;
+    font-size: 1.4rem;
+    line-height: 160%;
 }
