add block oure team
Блок наша команда.
СТруктура плюс картинки.
Без стилей.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -233,3 +233,24 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.4rem;
     line-height: 160%;
 }
+
+.team {
+}
+.team__header {
+}
+.team__header-imge {
+}
+.team__header-text {
+}
+.team__cards {
+}
+.team__card {
+}
+.card__image {
+}
+.card__name {
+}
+.card__description {
+}
+.button__biography {
+}
