add rigth margin and pading
отступы и грани блока исправлены для process  and team

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -232,12 +232,14 @@ h6 {
 .container__cards {
     display: flex;
     flex-direction: row;
+    margin: 0 -1.8rem;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-
+    padding: 0 1.8rem;
+    max-width: 30.6rem;
 }
 
 .card__header {
@@ -255,12 +257,13 @@ h6 {
 }
 
 .card__description {
-    max-width: 30.6rem;
+    max-width: 30.599rem;
     font-size: 1.4rem;
     line-height: 160%;
 }
 
 .team {
+    margin: 0 auto;
     width: 134.2rem;
     height: 61.9rem;
     margin-top: 20rem;
@@ -289,13 +292,14 @@ h6 {
     display: flex;
     margin-top: 6rem;
     justify-content: flex-end;
-    margin-left: 2.4rem;
+    margin: 0 -2.4rem;
 }
 
 .team__card {
     display: block;
     width: 41.6rem;
     height: 37.9rem;
+    padding: 2.4rem;
 }
 
 .card__image {
