--- a/source/css/style.css
+++ b/source/css/style.css
@@ -198,6 +198,7 @@ h6 {
 .process .container {
     display: flex;
     flex-direction: column;
+    max-width: 129.6rem;
 }
 
 .process__title {
@@ -292,10 +293,12 @@ h6 {
     display: flex;
     margin-top: 6rem;
     justify-content: flex-end;
-    margin: 0 -2.4rem;
+    margin: 0 auto;
 }
 
 .team__card {
+
+    margin: 0 auto;
     display: block;
     width: 41.6rem;
     height: 37.9rem;
@@ -303,17 +306,40 @@ h6 {
 }
 
 .card__image {
-    display: block;
+    margin: 0 auto;
     width: 19rem;
     height: 19rem;
     border-radius: 50%;
     overflow: hidden;
+    margin-bottom: 4rem;
 }
 
+.card__name {
+    text-align: center;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 140%;
+    margin-bottom: 1.5rem;
+}
 
+.card__description_team{
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1.6rem;
+    line-height: 100%;
+    margin-bottom: 3rem;
+}
 
-.card__name {}
+.button__biography {
+    background-color: inherit;
+    display: block;
+    margin: 0 auto;
+    padding: 1rem 3rem;
+    font-size: 1.6rem;
+    line-height: 150%;
+    border: 1px solid #FFFFFF;
+    color: #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 50px;
 
-.card__description {}
-
-.button__biography {}
+}
