--- a/source/css/style.css
+++ b/source/css/style.css
@@ -195,11 +195,17 @@ h6 {
     line-height: 160%;
 }
 
+.process {
+    position: relative;
+  
+}
+
 .process .container {
     display: flex;
     flex-direction: column;
     max-width: 129.6rem;
 }
+
 
 .process__title {
     display: flex;
@@ -236,6 +242,19 @@ h6 {
     margin: 0 -1.8rem;
 }
 
+.container__cards:after {
+    content: '';
+    display: block;
+    width: 130rem;
+    height: .2rem;
+    position: absolute;
+    top: 35rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+
+
 .card {
     display: flex;
     flex-direction: column;
@@ -247,15 +266,9 @@ h6 {
     font-weight: 700;
     font-size: 36px;
     line-height: 140%;
+    margin-bottom: 6.5rem;
 }
 
-.card__line {
-    margin-top: 1.5rem;
-    margin-bottom: 4.8rem;
-    width: 32.4rem;
-    height: 0.2rem;
-    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
-}
 
 .card__description {
     max-width: 30.599rem;
@@ -322,7 +335,7 @@ h6 {
     margin-bottom: 1.5rem;
 }
 
-.card__description_team{
+.card__description_team {
     text-align: center;
     margin: 0 auto;
     font-size: 1.6rem;
