--- a/source/css/style.css
+++ b/source/css/style.css
@@ -361,3 +361,59 @@ h6 {
     border-radius: 50px;
 
 }
+
+.assembly {
+    padding-bottom: 24.4rem;
+}
+
+.assembly__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.asembly__header {
+    margin-bottom: 3rem;
+    font-weight: 700;
+    font-size: 4.8rem;
+    line-height: 140%;
+}
+
+.assembly__description {
+    margin-bottom: 4.52rem;
+    font-size: 1.6rem;
+    line-height: 160%;
+}
+
+.assembly__button {
+    margin-bottom: 5.08rem;
+    background: linear-gradient(94.78deg, #E5E5E5 11.19%, #451046 93.72%);
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 150%;
+}
+
+.assembly__socials {
+    display: flex;
+}
+
+.assembly__item {
+    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.assembly__item img {
+    width: 50%;
+    height: 50%;
+}
+
+.assembly__item:not(:last-child) {
+    margin-right: 3rem;
+
+}
